# Pong-GTK

./: .gitignore  Makefile  Pong.aip  README.md  info.rc  main.c  meson.build  my.rc
Code/: functions.c  game.c  info.c  main.c  prototypes.h
iconData/: icon.rc  icon.xcf
